--- a/src/main/kotlin/com/dinaraparanid/prima/rust/Cargo.toml
+++ b/src/main/kotlin/com/dinaraparanid/prima/rust/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 [dependencies]
 jni = "0.19.0"
+chrono = "0.4"
+dirs2 = "3.0.1"
+futures = "0.3.21"
+audiotags = "0.2.7182"
 
 [lib]
 crate-type = ["cdylib"]
