--- a/src/main/kotlin/com/dinaraparanid/prima/rust/Cargo.toml
+++ b/src/main/kotlin/com/dinaraparanid/prima/rust/Cargo.toml
@@ -11,6 +11,7 @@ futures = { version = "0.3.21", features = ["thread-pool"] }
 audiotags = "0.2.7182"
 rodio = "0.15.0"
 async-recursion = "1.0.0"
+once_cell = "1.10.0"
 
 [lib]
 crate-type = ["cdylib"]
