--- a/src/main/kotlin/com/dinaraparanid/prima/rust/Cargo.toml
+++ b/src/main/kotlin/com/dinaraparanid/prima/rust/Cargo.toml
@@ -5,13 +5,14 @@ edition = "2021"
 
 [dependencies]
 jni = "0.19.0"
-chrono = "0.4"
+chrono = "0.4.19"
 dirs2 = "3.0.1"
 futures = { version = "0.3.21", features = ["thread-pool"] }
 rodio = "0.15.0"
 async-recursion = "1.0.0"
-once_cell = "1.10.0"
+once_cell = "1.12.0"
 os_str_bytes = "6.1.0"
+futures-timer = "3.0.2"
 
 [lib]
 crate-type = ["cdylib"]
