--- a/src/main/kotlin/com/dinaraparanid/prima/rust/Cargo.toml
+++ b/src/main/kotlin/com/dinaraparanid/prima/rust/Cargo.toml
@@ -13,6 +13,7 @@ async-recursion = "1.0.0"
 once_cell = "1.12.0"
 os_str_bytes = "6.1.0"
 futures-timer = "3.0.2"
+atomic_float = "0.1.0"
 
 [lib]
 crate-type = ["cdylib"]
