--- a/src/main/kotlin/com/dinaraparanid/prima/rust/Cargo.toml
+++ b/src/main/kotlin/com/dinaraparanid/prima/rust/Cargo.toml
@@ -14,6 +14,7 @@ once_cell = "1.12.0"
 os_str_bytes = "6.1.0"
 futures-timer = "3.0.2"
 atomic_float = "0.1.0"
+yaml-rust = "0.4.5"
 
 [lib]
 crate-type = ["cdylib"]
