--- a/src/main/kotlin/com/dinaraparanid/prima/rust/Cargo.toml
+++ b/src/main/kotlin/com/dinaraparanid/prima/rust/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 jni = "0.19.0"
 chrono = "0.4.19"
 dirs2 = "3.0.1"
-futures = { version = "0.3.21", features = ["thread-pool"] }
+futures = { version = "0.3.21" }
 rodio = "0.15.0"
 async-recursion = "1.0.0"
 once_cell = "1.12.0"
@@ -19,6 +19,7 @@ diesel = { version = "1.4.8", features = ["sqlite"] }
 diesel_migrations = "1.4.0"
 dotenv = "0.15.0"
 serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1.20.0", features = ["full"] }
 
 [lib]
 crate-type = ["cdylib"]
